exageostat_parsec/hicma/chameleon/control/morse_zf90.F90


      interface
         function MORSE_zsyr2k_c(uplo,trans,N,K,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='MORSE_zsyr2k')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsyr2k_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function MORSE_zsyr2k_c
      end interface

      interface
         function MORSE_zsyrk_c(uplo,trans,N,K,alpha,A,LDA,beta,C,LDC) &
          & bind(c, name='MORSE_zsyrk')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zsyrk_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function MORSE_zsyrk_c
      end interface

      interface
         function MORSE_ztrmm_c(side,uplo,transA,diag,N,NRHS,alpha,A,LDA,B,LDB) &
          & bind(c, name='MORSE_ztrmm')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_ztrmm_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: diag
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: NRHS
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_ztrmm_c
      end interface

      interface
         function MORSE_ztrsm_c(side,uplo,transA,diag,N,NRHS,alpha,A,LDA,B,LDB) &
          & bind(c, name='MORSE_ztrsm')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_ztrsm_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: diag
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: NRHS
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_ztrsm_c
      end interface

      interface
         function MORSE_ztrsmpl_c(N,NRHS,A,LDA,descL,IPIV,B,LDB) &
          & bind(c, name='MORSE_ztrsmpl')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_ztrsmpl_c
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: NRHS
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: descL
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_ztrsmpl_c
      end interface

      interface
         function MORSE_ztrsmrv_c(side,uplo,transA,diag,N,NRHS,alpha,A,LDA,B,LDB) &
          & bind(c, name='MORSE_ztrsmrv')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_ztrsmrv_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: diag
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: NRHS
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_ztrsmrv_c
      end interface

      interface
         function MORSE_ztrtri_c(uplo,diag,N,A,LDA) &
          & bind(c, name='MORSE_ztrtri')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_ztrtri_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: diag
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function MORSE_ztrtri_c
      end interface

      interface
         function MORSE_zunglq_c(M,N,K,A,LDA,descT,B,LDB) &
          & bind(c, name='MORSE_zunglq')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zunglq_c
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: descT
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_zunglq_c
      end interface

      interface
         function MORSE_zungqr_c(M,N,K,A,LDA,descT,B,LDB) &
          & bind(c, name='MORSE_zungqr')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zungqr_c
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: descT
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_zungqr_c
      end interface

      interface
         function MORSE_zunmlq_c(side,trans,M,N,K,A,LDA,descT,B,LDB) &
          & bind(c, name='MORSE_zunmlq')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zunmlq_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: trans
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: descT
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_zunmlq_c
      end interface

      interface
         function MORSE_zunmqr_c(side,trans,M,N,K,A,LDA,descT,B,LDB) &
          & bind(c, name='MORSE_zunmqr')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zunmqr_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: trans
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: descT
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function MORSE_zunmqr_c
      end interface

    !+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
    !  FORTRAN API - math functions (native interface)
    !
      interface
         function MORSE_zgebrd_Tile_c(A,D,E,T) &
          & bind(c, name='MORSE_zgebrd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgebrd_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: T
          end function MORSE_zgebrd_Tile_c
      end interface

      interface
         function MORSE_zgelqf_Tile_c(A,T) &
          & bind(c, name='MORSE_zgelqf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgelqf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
          end function MORSE_zgelqf_Tile_c
      end interface

      interface
         function MORSE_zgelqs_Tile_c(A,T,B) &
          & bind(c, name='MORSE_zgelqs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgelqs_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function MORSE_zgelqs_Tile_c
      end interface

      interface
         function MORSE_zgels_Tile_c(trans,A,T,B) &
          & bind(c, name='MORSE_zgels_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgels_Tile_c
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function MORSE_zgels_Tile_c
      end interface

      interface
         function MORSE_zgemm_Tile_c(transA,transB,alpha,A,B,beta,C) &
          & bind(c, name='MORSE_zgemm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgemm_Tile_c
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: transB
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: C
          end function MORSE_zgemm_Tile_c
      end interface

      interface
         function MORSE_zgeqrf_Tile_c(A,T) &
          & bind(c, name='MORSE_zgeqrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgeqrf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
          end function MORSE_zgeqrf_Tile_c
      end interface

      interface
         function MORSE_zgeqrs_Tile_c(A,T,B) &
          & bind(c, name='MORSE_zgeqrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgeqrs_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function MORSE_zgeqrs_Tile_c
      end interface

      interface
         function MORSE_zgesv_Tile_c(A,IPIV,B) &
          & bind(c, name='MORSE_zgesv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgesv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function MORSE_zgesv_Tile_c
      end interface

      interface
         function MORSE_zgesv_incpiv_Tile_c(A,L,IPIV,B) &
          & bind(c, name='MORSE_zgesv_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgesv_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function MORSE_zgesv_incpiv_Tile_c
      end interface
